# templates

c_template/: CMakeLists.txt
crossterm_template/: Cargo.toml
crossterm_template/src/: main.rs
glfw_2d_template/: CMakeLists.txt  main.c  run.sh
glfw_2d_template/shaders/: fragment_shader.glsl  vertex_shader.glsl
glfw_2d_template/src/: fragment_shader.glsl  main.c
sdl2/: build  main.cpp  out  run
three_template/: index.html  package-lock.json  package.json
